--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ufgoeqwjeavgreza:H4eL9hRffn2xd2O1IMgg@bfpsq3nj5hglafritpzf-mysql.services.clever-cloud.com:3306/bfpsq3nj5hglafritpzf 
+spring.datasource.url=jdbc:mysql://ufgoeqwjeavgreza:H4eL9hRffn2xd2O1IMgg@bfpsq3nj5hglafritpzf-mysql.services.clever-cloud.com:3306/bfpsq3nj5hglafritpzf
 spring.datasource.username=ufgoeqwjeavgreza
 spring.datasource.password=H4eL9hRffn2xd2O1IMgg
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.show-sql=true
+spring.datasource.generate-ddl=true
